<resources>
    <string name="app_name">ApgarApp</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="absent">Absent</string>
    <string name="_100"><![CDATA[<=100]]></string>
    <string name="_100_"><![CDATA[>=100]]></string>
    <string name="respiratory">Respiratory</string>
    <string name="non_breathing">Not Breathing</string>
    <string name="irregular">Irregular</string>
    <string name="good">Good</string>
    <string name="muscle_tone">Muscle Tone</string>
    <string name="limp">Limp</string>
    <string name="some">Some</string>
    <string name="active">Active</string>
    <string name="reflex">Reflex</string>
    <string name="non">No response</string>
    <string name="grimace">Grimace</string>
    <string name="color">Color</string>
    <string name="pale">Pale</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="scoreRadio">score</string>
    <string name="baby_name">Name :</string>
    <string name="baby_id">ID :</string>
    <string name="date">Date : DD/MM/YYYY/HH/MM/SS</string>
    <string name="save_button">Save</string>
    <string name="create_new">Create New</string>
    <string name="respiratory_result">Respiratory : </string>
    <string name="muscletone_result">MuscleTone : </string>
    <string name="reflex_result">Reflex : </string>
    <string name="heartrate_result">HeartRate : </string>
    <string name="color_result">Color : </string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="review_apgarscore">Review :</string>
    <string name="phase_Result">Phase</string>
    <string name="score_result">Score</string>
    <string name="review_result">Review</string>
</resources>
