<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckBabyInfo">

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="#4E1077"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/SaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baby_name"
            android:minHeight="48dp"
            tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize"
            android:autofillHints="" />

        <EditText
            android:id="@+id/idInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baby_id"
            android:minHeight="48dp"
            tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize"
            android:autofillHints="" />

        <EditText
            android:id="@+id/bornDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:minHeight="48dp"
            tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>